--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta property="og:type" content="website">
+<meta property="og:url" content="https://tilog.life">
+<meta property="og:title" content="틸로그">
+<meta property="og:image" content="app_logo.png">
+<meta property="og:description" content="틸로그를 쌓아보세요">
+<meta property="og:site_name" content="틸로그">
+    <link rel="icon" type="image/svg+xml" href="/app_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>틸로그</title>
   </head>
   <body>
     <div id="root">
