--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta property="og:url" content="https://tilog.life">
 <meta property="og:title" content="틸로그">
 <meta property="og:image" content="app_logo.png">
-<meta property="og:description" content="틸로그를 쌓아보세요">
+<meta property="og:description" content="성장하는 사람들을 위한 TIL 기록,피드백,커뮤니티 서비스">
 <meta property="og:site_name" content="틸로그">
     <link rel="icon" type="image/svg+xml" href="/app_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
